Change project back to no standalone

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "angular-tour-of-heroes",
+  "name": "tour-heroes",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --open",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:angular-tour-of-heroes": "node dist/angular-tour-of-heroes/server/server.mjs"
+    "serve:ssr:tour-heroes": "node dist/tour-heroes/server/server.mjs"
   },
   "private": true,
   "dependencies": {
